[project]
name = "skykings-weight"
authors = [
    { name = "plun1331" }
]
description = "A library for calculating a player's weight in Hypixel Skyblock"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.setuptools]
packages = [
    "skykings_weight",
]
